# bw

./: .gitignore  CLAUDE.md  README.md
src/: CMakeLists.txt
src/core/: Abode.cpp  AnimEdit.cpp  Animal.cpp  AnimatedStatic.cpp  Arena.cpp  Arrow.cpp  BWGameSpy.cpp  BWLan.cpp  Ball.cpp  Base.cpp  Bat.cpp  BigForest.cpp  Bonfire.cpp  BuildingSite.cpp  CPUCheck.cpp  CameraMode.cpp  CameraModeNew3.cpp  Chain.cpp  Citadel.cpp  CitadelBuildingSite.cpp  CitadelEntrance.cpp  CitadelHeart.cpp  CitadelPart.cpp  Container.cpp  Cow.cpp  Creature.cpp  CreatureBeliefList.cpp  CreatureBeliefs.cpp  CreatureDatabase.cpp  CreatureGlobalExplorationMap.cpp  CreatureMental.cpp  CreaturePen.cpp  CreatureRoom.cpp  CreatureRoomCamera.cpp  CreatureSelect.cpp  Creche.cpp  Crow.cpp  Dance.cpp  DanceGroup.cpp  DanceKeyFrame.cpp  (+200 more)
src/include/black/: Abode.h  AllocatedBeliefList.h  AnimEdit.h  Animal.h  AnimalBat.h  AnimalCow.h  AnimalCrow.h  AnimalDove.h  AnimalGoat.h  AnimalHorse.h  AnimalLeopard.h  AnimalLion.h  AnimalPig.h  AnimalPigeon.h  AnimalSeagull.h  AnimalSheep.h  AnimalSwallow.h  AnimalTiger.h  AnimalTortoise.h  AnimalVulture.h  AnimalWolf.h  AnimalZebra.h  AnimatedStatic.h  Arena.h  Arrow.h  Artifact.h  Attribute.h  AttributeTest.h  BWGameSpy.h  BWLan.h  Ball.h  Base.h  Bat.h  BigForest.h  BindableAction.h  Bonfire.h  Bookmark.h  BookmarkGraphic.h  Bubble.h  BuildingSite.h  (+555 more)
tools/: ExportFunctions.java  GhidraStats.java  apply_rtp.c  bin2iso.js  build_injector.bat  build_injector_result.txt  export_functions.java  extract_all.sh  extract_all_v2.js  extract_all_v3.js  extract_all_v4.js  extract_by_index.js  ghidra_stats.java  inject_and_run.c  parse_vtables.js
work/: ANALYSIS_REPORT.md  functions.csv  rtti_classes.csv  vtable_data.json  vtable_data.txt  vtable_match_summary.txt
work/decompiled/: Abode.c  Animal.c  AnimatedStatic.c  ArenaSpellIcon.c  BWGameSpyFv.c  BWLan.c  BWLanFv.c  Ball.c  Base.c  BaseInfoCFv.c  Bat.c  BigForest.c  Bonfire.c  BuildingSite.c  CDBox.c  CHand.c  CHandFf.c  CameraModeNew3Fv.c  CameraModeTwoObjects.c  ChannelBox.c  ChessPion.c  Citadel.c  CitadelBuildingSite.c  CitadelEntrance.c  CitadelHeart.c  CitadelPart.c  Container.c  Cow.c  Creature.c  CreatureActionInfo.c  CreatureActionKnownAboutEntry.c  CreatureDesireActionEntry.c  CreatureDesireAttributeEntry.c  CreatureDesireDependency.c  CreatureDesireForType.c  CreatureDesireSourceTable.c  CreatureDevelopmentDurationEntry.c  CreatureDevelopmentPhaseEntry.c  CreatureFalling.c  CreatureFv.c  (+228 more)
work/scripts/: DecompileNamedFunctions.java  FindRTTI.java  LabelVtablesAndGlobals.java  VtableMatcher.java
